kampuze and dms added

--- a/work.html
+++ b/work.html
@@ -137,16 +137,16 @@
                     <div class="card2">
                         <img class="card-img-top" src="images/awsImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">africawork.space</h4>
+                            <h4 class="card-title" style="font-weight: 700">Kampuze Music</h4>
                             <p class="card-text mt-3" style="font-weight: 300">
-                                A community of African creatives that creates digital content.</p>
+                                Buy and sell music on Kampuze on your smartphone.</p>
 
-                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> Brand
-                                Designer & Web Developer
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> UI/UX
+                                Designer
 
                             </p>
                             <div class="text-left card-button">
-                                <a href="https://africawork.space" class="btn btn-secondary" target=”_blank”>Website
+                                <a href="https://www.figma.com/proto/oiJYt62X4b2nbWeCQdVVat/Kampuze-Music" class="btn btn-secondary" target=”_blank”>Figma Prototype
                                     →</a>
                             </div>
                         </div>
@@ -168,21 +168,16 @@
                             <p class="card-text mt-3" style="font-weight: 300">
                                 Real Estate Times Africa with Valco, GES, Ministries of Energy & Education, Ghana.</p>
 
-                            <p style="font-weight: 300"><strong style="font-weight: 600">Role: </strong>Product
-                                Manager
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong>Product
+                                Designer & Manager
                             <p style="font-weight: 300"><strong style="font-weight: 600">Team:<br></strong>Daniel
                                 Partey,
                                 Benjamin Ikeh, Charles Kwabena & Lennox Ayi-Bisahnox
                             </p>
-                            <div class="text-left card-button">
-                                    class="btn btn-secondary" target=”_blank”>Details →</a>
-                            </div>
-
-
-
+                           
                             <div class="text-left col-md-4 col-sm-6 col-12">
                                 <ul class="card-button">
-                                    <li><a href="https://www.figma.com/file/80K2ZP7d4TE2WKmqS67MPo/Schools-Under-Trees-Project"
+                                    <li><a href="https://www.figma.com/proto/80K2ZP7d4TE2WKmqS67MPo/Schools-Under-Trees-Project"
                                             class="btn btn-secondary" target=”_blank”>Figma Prototype →</a>
                                     </li>
                                     <li><a href="https://realestatetimesafrica.com/news/education/809/Zero+Schools+Under+Trees+Website+Launched+in+Accra"
@@ -211,8 +206,9 @@
 
                             </p>
 
-                            <div class="text-left card-disabbled">
-                                <a class="btn btn-secondary">Coming Soon</a>
+                            <div class="text-left card-button">
+                                <a href="https://www.figma.com/proto/ryCffr85wTEYm84tw2A12r/1GHALON-UI%2FUX"
+                                    class="btn btn-secondary" target=”_blank”>Figma Prototype →</a>
                             </div>
                         </div>
                     </div>
