--- a/work.html
+++ b/work.html
@@ -103,39 +103,30 @@
                 </div>
 
 
-
-
                 <div class="col-lg-4 mt-4">
                     <div class="card2">
-                        <img class="card-img-top" src="images/opdImage.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="images/dmsImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">Orange Dictionary</h4>
-                            <p class="card-text mt-3" style="font-weight: 300">An offline dictionary containing
-                                terms and their meanings in publishing, printing, design and illustration industry.</p>
-                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> UI/UX
-                                Designer & Android Developer
-
+                            <h4 class="card-title" style="font-weight: 700">Document Management System</h4>
+                            <p class="card-text mt-3" style="font-weight: 300">Designed for the Eastern Regional
+                                Coordinating Council, Ghana.</p>
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Role: </strong> UI/UX
+                                Designer
                             </p>
-                            <div class="text-left col-md-4 col-sm-6 col-12">
-                                <ul class="card-button">
 
-                                    <li><a href="https://play.google.com/store/apps/details?id=com.deemiensa.dictionary"
-                                            class="btn btn-secondary" target=”_blank”>Google Play Store →</a>
-                                    </li>
-
-                                    <li><a href="https://github.com/desmondknunoo/PublishingDictionary"
-                                            class="btn btn-secondary" target=”_blank”>GitHub →</a>
-                                    </li>
-
-
+                            <div class="text-left card-button">
+                                <a href="https://www.figma.com/proto/dxl6jGTO8T50H64JpmcLeq/Document-Management-System"
+                                    class="btn btn-secondary" target=”_blank”>Figma Prototype →</a>
                             </div>
                         </div>
                     </div>
                 </div>
 
+                
+
                 <div class="col-lg-4 mt-4">
                     <div class="card2">
-                        <img class="card-img-top" src="images/awsImage.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="images/kampuzeImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
                             <h4 class="card-title" style="font-weight: 700">Kampuze Music</h4>
                             <p class="card-text mt-3" style="font-weight: 300">
@@ -217,18 +208,27 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card2">
-                        <img class="card-img-top" src="images/dmsImage.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="images/opdImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">Document Management System</h4>
-                            <p class="card-text mt-3" style="font-weight: 300">Designed for the Eastern Regional
-                                Coordinating Council, Ghana.</p>
-                            <p style="font-weight: 300"><strong style="font-weight: 600">Role: </strong> UI/UX
-                                Designer
-                            </p>
+                            <h4 class="card-title" style="font-weight: 700">Orange Dictionary</h4>
+                            <p class="card-text mt-3" style="font-weight: 300">An offline dictionary containing
+                                terms and their meanings in publishing, printing, design and illustration industry.</p>
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> UI/UX
+                                Designer & Android Developer
 
-                            <div class="text-left card-button">
-                                <a href="https://www.figma.com/proto/dxl6jGTO8T50H64JpmcLeq/Document-Management-System"
-                                    class="btn btn-secondary" target=”_blank”>Figma Prototype →</a>
+                            </p>
+                            <div class="text-left col-md-4 col-sm-6 col-12">
+                                <ul class="card-button">
+
+                                    <li><a href="https://play.google.com/store/apps/details?id=com.deemiensa.dictionary"
+                                            class="btn btn-secondary" target=”_blank”>Google Play Store →</a>
+                                    </li>
+
+                                    <li><a href="https://github.com/desmondknunoo/PublishingDictionary"
+                                            class="btn btn-secondary" target=”_blank”>GitHub →</a>
+                                    </li>
+
+
                             </div>
                         </div>
                     </div>
@@ -338,35 +338,6 @@
                 </div>
 
 
-
-
-                <div class="col-lg-4 mt-4">
-                    <div class="card2">
-                        <img class="card-img-top" src="images/opdImage.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">Orange Dictionary</h4>
-                            <p class="card-text mt-3" style="font-weight: 300">An offline dictionary containing
-                                terms and their meanings in publishing, printing, design and illustration industry.</p>
-                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> UI/UX
-                                Designer & Android Developer
-
-                            </p>
-                            <div class="text-left col-md-4 col-sm-6 col-12">
-                                <ul class="card-button">
-
-                                    <li><a href="https://play.google.com/store/apps/details?id=com.deemiensa.dictionary"
-                                            class="btn btn-secondary" target=”_blank”>Google Play Store →</a>
-                                    </li>
-
-                                    <li><a href="https://github.com/desmondknunoo/PublishingDictionary"
-                                            class="btn btn-secondary" target=”_blank”>GitHub →</a>
-                                    </li>
-
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
                 <div class="col-lg-4 mt-4">
                     <div class="card2">
