smartsale erp added

--- a/work.html
+++ b/work.html
@@ -192,11 +192,12 @@
                             <p class="card-text mt-3" style="font-weight: 300">Latest fuel prices in Ghana. Updated
                                 with actual prices at the physical pump.
                             </p>
-                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> Brand &
-                                UI/UX Designer
-
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong>Product
+                                Designer & Manager
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Team:<br></strong>
+                                Geoffery Agyare, Daniel Partey, Samuel Nsiah, Nathaniel Buah Kwofie & Isaac Duncan-Williams
                             </p>
-
+                           
                             <div class="text-left card-button">
                                 <a href="https://www.figma.com/proto/ryCffr85wTEYm84tw2A12r/1GHALON-UI%2FUX"
                                     class="btn btn-secondary" target=”_blank”>Figma Prototype →</a>
