figma permission added

--- a/work.html
+++ b/work.html
@@ -161,6 +161,7 @@
 
                             <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong>Product
                                 Designer & Manager
+                            </p> 
                             <p style="font-weight: 300"><strong style="font-weight: 600">Team:<br></strong>Daniel
                                 Partey,
                                 Benjamin Ikeh, Charles Kwabena & Lennox Ayi-Bisahnox
@@ -194,6 +195,7 @@
                             </p>
                             <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong>Product
                                 Designer & Manager
+                            </p>
                             <p style="font-weight: 300"><strong style="font-weight: 600">Team:<br></strong>
                                 Geoffery Agyare, Daniel Partey, Samuel Nsiah, Nathaniel Buah Kwofie & Isaac Duncan-Williams
                             </p>
@@ -214,9 +216,12 @@
                             <h4 class="card-title" style="font-weight: 700">Orange Dictionary</h4>
                             <p class="card-text mt-3" style="font-weight: 300">An offline dictionary containing
                                 terms and their meanings in publishing, printing, design and illustration industry.</p>
-                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> UI/UX
+                            </p>
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong>UI/UX
                                 Designer & Android Developer
-
+                            </p>
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Team:<br></strong>
+                                Charity Marfo & Comfort Serwaa
                             </p>
                             <div class="text-left col-md-4 col-sm-6 col-12">
                                 <ul class="card-button">
