--- a/work.html
+++ b/work.html
@@ -132,7 +132,7 @@
                             <p class="card-text mt-3" style="font-weight: 300">
                                 Buy and sell music on Kampuze on your smartphone.</p>
 
-                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> UI/UX
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:</strong> UI/UX
                                 Designer
 
                             </p>
