--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                                 <h4 class="card-title" style="font-weight: 700">SmartSale ERP Website - Redesign</h4>
                                 <p class="card-text mt-3" style="font-weight: 200">Integrated technology for managing your business.</p>
                                 <div class="text-left card-button">
-                                    <a href="https://www.figma.com/proto/gQ4u5PlpK34n5gqdLoT8bL/SmartSale-Website?node-id=0%3A1" 
+                                    <a href="https://www.figma.com/proto/HdGJI0rx0r2xWJodWBqXvC/SmartSale-Website---Redesign" 
                                     class="btn btn-secondary" target=”_blank”>Figma Prototype →</a>
                                         
                                 </div>
