SS Link updated

--- a/work.html
+++ b/work.html
@@ -93,7 +93,7 @@
                                 <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> Web Designer & Developer
                                 </p>
                                 <div class="text-left card-button">
-                                    <a href="https://www.figma.com/proto/gQ4u5PlpK34n5gqdLoT8bL/SmartSale-Website?node-id=0%3A1" class="btn btn-secondary" target=”_blank”>Figma Prototype →</a>
+                                    <a href="https://www.figma.com/proto/HdGJI0rx0r2xWJodWBqXvC/SmartSale-Website---Redesign" class="btn btn-secondary" target=”_blank”>Figma Prototype →</a>
                                 </div>
                             </div>
                         </div>
