Ranxbrand and africawork.space removed

--- a/work.html
+++ b/work.html
@@ -298,41 +298,7 @@
                 </div>
 
 
-                <div class="row">
-
-                    <div class="col-lg-4 mt-4">
-                        <div class="card2">
-                            <img class="card-img-top" src="images/ranxbrandImage.jpg" alt="Card image" style="width:100%">
-                            <div class="card-body2">
-                                <h4 class="card-title" style="font-weight: 700">Ranxbrand</h4>
-                                <p class="card-text mt-3" style="font-weight: 300">
-                                    Procurement in China · Educational Consult in China · Graphic Design.</p>
-                                <p style="font-weight: 300"><strong style="font-weight: 600">Role: </strong>Web Developer
-                                </p>
-                                <div class="text-left card-button">
-                                    <a href="https://ranxbrand.com" class="btn btn-secondary" target=”_blank”>Website →</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 mt-4">
-                        <div class="card2">
-                            <img class="card-img-top" src="images/awsImage.jpg" alt="Card image" style="width:100%">
-                            <div class="card-body2">
-                                <h4 class="card-title" style="font-weight: 700">africawork.space</h4>
-                                <p class="card-text mt-3" style="font-weight: 300">
-                                    A community of African creatives that creates digital content.</p>
-                                <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> Brand
-                                    Designer & Web Developer
-                                </p>
-                                <div class="text-left card-button">
-                                    <a href="https://africawork.space" class="btn btn-secondary" target=”_blank”>Website
-                                        →</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                
                 </div>
 
             
@@ -506,3 +472,42 @@
         <script src="script/script.js"></script>
     </body>
 </html>
+
+
+
+<!-- <div class="row">
+
+                    <div class="col-lg-4 mt-4">
+                        <div class="card2">
+                            <img class="card-img-top" src="images/ranxbrandImage.jpg" alt="Card image" style="width:100%">
+                            <div class="card-body2">
+                                <h4 class="card-title" style="font-weight: 700">Ranxbrand</h4>
+                                <p class="card-text mt-3" style="font-weight: 300">
+                                    Procurement in China · Educational Consult in China · Graphic Design.</p>
+                                <p style="font-weight: 300"><strong style="font-weight: 600">Role: </strong>Web Developer
+                                </p>
+                                <div class="text-left card-button">
+                                    <a href="https://ranxbrand.com" class="btn btn-secondary" target=”_blank”>Website →</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 mt-4">
+                        <div class="card2">
+                            <img class="card-img-top" src="images/awsImage.jpg" alt="Card image" style="width:100%">
+                            <div class="card-body2">
+                                <h4 class="card-title" style="font-weight: 700">africawork.space</h4>
+                                <p class="card-text mt-3" style="font-weight: 300">
+                                    A community of African creatives that creates digital content.</p>
+                                <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> Brand
+                                    Designer & Web Developer
+                                </p>
+                                <div class="text-left card-button">
+                                    <a href="https://africawork.space" class="btn btn-secondary" target=”_blank”>Website
+                                        →</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+ -->
