--- a/work.html
+++ b/work.html
@@ -254,19 +254,17 @@
 
                     <div class="col-lg-4 mt-4">
                         <div class="card2">
-                            <img class="card-img-top" src="images/fudrinImage.jpg" alt="Card image" style="width:100%">
+                            <img class="card-img-top" src="images/sbsImage.jpg" alt="Card image" style="width:100%">
                             <div class="card-body2">
-                                <h4 class="card-title" style="font-weight: 700">Fudrin</h4>
+                                <h4 class="card-title" style="font-weight: 700">Sodium Brand Solutions Website - Redesign</h4>
                                 <p class="card-text mt-3" style="font-weight: 300">
-                                    Fudrin helps you turn your cooking abilities into everyday earning activity.</p>
-                                <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> UI/UX
-                                    Designer & Android Developer
-                                <p style="font-weight: 300"><strong style="font-weight: 600">Team: </strong> Daniel
-                                    Partey
+                                    A 360 marketing and communications company</p>
+
+                                <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> Web Designer & Developer
                                 </p>
                                 <div class="text-left card-button">
-                                    <a href="https://play.google.com/store/apps/details?id=com.deemiensa.fudrin"
-                                        class="btn btn-secondary" target=”_blank”>Google Play Store →</a>
+                                    <a href="https://sodiumgh.com"
+                                        class="btn btn-secondary" target=”_blank”>Website →</a>
                                 </div>
                             </div>
                         </div>
