SSERP website added

--- a/work.html
+++ b/work.html
@@ -92,9 +92,19 @@
 
                                 <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> Web Designer & Developer
                                 </p>
-                                <div class="text-left card-button">
-                                    <a href="https://www.figma.com/proto/HdGJI0rx0r2xWJodWBqXvC/SmartSale-Website---Redesign" class="btn btn-secondary" target=”_blank”>Figma Prototype →</a>
+                                
+                                <div class="text-left col-md-4 col-sm-6 col-12">
+                                    <ul class="card-button">
+                                        <li><a href="https://www.figma.com/proto/HdGJI0rx0r2xWJodWBqXvC/SmartSale-Website---Redesign" 
+                                               class="btn btn-secondary" target=”_blank”>Figma Prototype →</a>
+
+                                        </li>
+                                        <li><a href="https://smartsaleerp.com"
+                                                class="btn btn-secondary" target=”_blank”>Website →</a>
+                                        </li>
+                                    </ul>
                                 </div>
+                                
                             </div>
                         </div>
                     </div>
