--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
 
                         <h1 class="hero_title" style="padding-left: 10%; padding-right:10%;">Desmond Kwame Nunoo</h1>
-                        <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">I'm a Brand & Product Designer in
+                        <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">I'm a Software & UI/UX Designer in
                             Accra, Ghana</h1>
 
                         <ul class="social-icons-header hero_desc" style="padding-left: 10%; padding-right:10%;">
