--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 </p>
                                 <hr>
                                 <h4 class="card-title" style="font-weight: 700">Closeup Promo</h4>
-                                <p class="card-text mt-3" style="font-weight: 200">COVID-19 social media
+                                <p class="card-text mt-3" style="font-weight: 200">Test COVID-19 social media
                                     campaign for
                                     Closeup.</p>
                                 </p>
