--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 </div>
             </div>
         </footer>
-        <!-- load javascript after loading all html content -->
+        <!-- load javascript after loading all html contents -->
         <script src="script/script.js"></script>
     </body>
 </html>
