--- a/work.html
+++ b/work.html
@@ -438,7 +438,7 @@
                                 <h4 class="card-title" style="font-weight: 700">Hormnes Global Engineering & Construction
                                     Limited</h4>
                                 <p class="card-text mt-3" style="font-weight: 300">General construction, fencing, steel
-                                    erecting etc.</p>
+                                    erecting etc. in Ghana</p>
                                 <p style="font-weight: 300"><strong style="font-weight: 600">Role: </strong>Brand Designer
                                 </p>
                                 <div class="text-left card-button">
