--- a/work.html
+++ b/work.html
@@ -88,7 +88,7 @@
                             <div class="card-body2">
                                 <h4 class="card-title" style="font-weight: 700">SmartSale ERP Website - Redesign</h4>
                                 <p class="card-text mt-3" style="font-weight: 300">
-                                    Integrated technology for managing your business</p>
+                                    Integrated technology for managing your business.</p>
 
                                 <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> Web Designer & Developer
                                 </p>
