--- a/work.html
+++ b/work.html
@@ -214,7 +214,7 @@
                             <div class="card-body2">
                                 <h4 class="card-title" style="font-weight: 700">Orange Dictionary</h4>
                                 <p class="card-text mt-3" style="font-weight: 300">An offline dictionary containing
-                                    terms and their meanings in publishing, printing, design and illustration industry.</p>
+                                    terms and their meanings for the publishing, printing, design and illustration industry.</p>
                                 </p>
                                 <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong>UI/UX
                                     Designer & Android Developer
