--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                 <hr>
                                 <h4 class="card-title" style="font-weight: 700">Break The Fast</h4>
                                 <p class="card-text mt-3" style="font-weight: 200">
-                                    Vendor of yummy meals for breaking your fast.
+                                    A vendor of yummy meals for breaking your fast.
                                 </p>
                                 <div class="text-left card-button">
                                     <a href="https://www.behance.net/gallery/90763875/Break-The-Fast-Brand-Identity"
