--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                         <h1 class="hero_title" style="padding-left: 10%; padding-right:10%;">Desmond Kwame Nunoo</h1>
                         <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Database Admin, Multimedia, 3D, Robotics & Software</h1>
 
-                        <ul class="social-icons-header hero_desc" style="padding-left: 10%; padding-right:10%;">
+                        <!-- <ul class="social-icons-header hero_desc" style="padding-left: 10%; padding-right:10%;">
                             <li><a class="linkedin" href="https://linkedin.com/in/desmondknunoo" target=”_blank”><i
-                                        class="fab fa-linkedin-in"></i></a></li>
+                                        class="fab fa-linkedin-in"></i></a></li> -->
                             <li><a class="behance" href="https://behance.net/desmondknunoo" target=”_blank”><i
                                         class="fab fa-behance"></i></a></li>
                             <li><a class="twitter" href="https://twitter.com/desmondknunoo" target=”_blank”><i
