--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
 
                         <h1 class="hero_title" style="padding-left: 10%; padding-right:10%;">Desmond Kwame Nunoo</h1>
-                        <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Data <i>(analytics | database | research), Multimedia (graphic | publication | 3D | motion)</i>, Robotics <i>(electronic | Arduino | Raspberry Pi | IoT | 3D printing)</i> & Software <i>(UI/UX | web | Android | iOS | embeded</i></h1>
+                        <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Data <i class="card-text mt-3" style="font-weight: 200">(analytics | database | research)</i>, 
+                                                                                          <br>Multimedia <i class="card-text mt-3" style="font-weight: 200">(graphic | publication | 3D | motion)</i>, 
+                                                                                          <br>Robotics <i class="card-text mt-3" style="font-weight: 200">(electronic | Arduino | Raspberry Pi | IoT | 3D printing)</i> & 
+                                                                                          <br>Software <i class="card-text mt-3" style="font-weight: 200">(UI/UX | web | Android | iOS | embeded</i></h1>
 
                          <ul class="social-icons-header hero_desc" style="padding-left: 10%; padding-right:10%;">
                            <!-- <li><a class="linkedin" href="https://linkedin.com/in/desmondknunoo" target=”_blank”><i
