--- a/index.html
+++ b/index.html
@@ -80,20 +80,20 @@
                         
                         <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Data</h1>
                         <div class="card-body">
-                                <p class="card-text mt-3" style="font-weight: 100">(analytics | database | research)</p>
+                                <p style="font-weight: 200; margin-left: 10%; margin-right: 10%;">(analytics | database | research)</p>
                         </div>
                         
                         <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Multimedia</h1>
                         <div class="card-body">
-                                <p class="card-text mt-3" style="font-weight: 100">(publication | graphic | 3D | motion)</p>
+                                <p style="font-weight: 200; margin-left: 10%; margin-right: 10%;">(publication | graphic | 3D | motion)</p>
                         </div>   
                          <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Robotics</h1>
                             <div class="card-body">
-                                <p class="card-text mt-3" style="font-weight: 100">(electronic | Arduino | Raspberry Pi | IoT | 3D printing)</p>
+                                <p style="font-weight: 200; margin-left: 10%; margin-right: 10%;">(electronic | Arduino | Raspberry Pi | IoT | 3D printing)</p>
                         </div>   
                          <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Software</h1>
                         <div class="card-body">
-                                <p class="card-text mt-3" style="font-weight: 100">(UI/UX | web | Android | iOS | embeded)</p>
+                                <p style="font-weight: 200; margin-left: 10%; margin-right: 10%;">(UI/UX | web | Android | iOS | embeded)</p>
                         </div>
 
                          <ul class="social-icons-header hero_desc" style="padding-left: 10%; padding-right:10%;">
