--- a/index.html
+++ b/index.html
@@ -77,24 +77,7 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
 
                         <h1 class="hero_title" style="padding-left: 10%; padding-right:10%;">Desmond Kwame Nunoo</h1>
-                        
-                        <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Data</h1>
-                        <div class="card-body">
-                                <p style="font-weight: 200; margin-left: 10%; margin-right: 10%;">(analytics | database | research)</p>
-                        </div>
-                        
-                        <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Multimedia</h1>
-                        <div class="card-body">
-                                <p style="font-weight: 200; margin-left: 10%; margin-right: 10%;">(publication | graphic | 3D | motion)</p>
-                        </div>   
-                         <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Robotics</h1>
-                            <div class="card-body">
-                                <p style="font-weight: 200; margin-left: 10%; margin-right: 10%;">(electronic | Arduino | Raspberry Pi | IoT | 3D printing)</p>
-                        </div>   
-                         <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Software</h1>
-                        <div class="card-body">
-                                <p style="font-weight: 200; margin-left: 10%; margin-right: 10%;">(UI/UX | web | Android | iOS | embeded)</p>
-                        </div>
+                        <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Database Admin, Multimedia, 3D, Robotics & Software</h1>
 
                          <ul class="social-icons-header hero_desc" style="padding-left: 10%; padding-right:10%;">
                            <!-- <li><a class="linkedin" href="https://linkedin.com/in/desmondknunoo" target=”_blank”><i
