--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
 
                         <h1 class="hero_title" style="padding-left: 10%; padding-right:10%;">Desmond Kwame Nunoo</h1>
-                        <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Multimedia (graphic | video | audio | 3D | motion), Robotics (electronics | Arduino | Raspberry Pi | IoT | 3D printing) & Software (UI/UX | web | Android | iOS ) and Data (analytics | database | research) </h1>
+                        <!-- <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Multimedia (graphic | video | audio | 3D | motion), Robotics (electronics | Arduino | Raspberry Pi | IoT | 3D printing) & Software (UI/UX | web | Android | iOS ) and Data (analytics | database | research) </h1> -->
+
+<h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Design | Product | Web & App</h1> 
 
                          <ul class="social-icons-header hero_desc" style="padding-left: 10%; padding-right:10%;">
                            <li><a class="linkedin" href="https://linkedin.com/in/desmondknunoo" target=”_blank”><i
