--- a/work.html
+++ b/work.html
@@ -29,6 +29,18 @@
         <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
 
         <!-- Add analytics here-->
+        <!-- Hotjar Tracking Code for https://desmond-portfolio.vercel.app -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3775019,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+        
 
     </head>
 
