--- a/index.html
+++ b/index.html
@@ -82,32 +82,15 @@
             </div>
         </nav>
         <!-- main banner -->
-        <section class="bgimage" id="home">
+       <!--   <section class="bgimage" id="home">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
 
-                       <!--  <h1 class="hero_title" style="padding-left: 10%; padding-right:10%;">Desmond Kwame Nunoo</h1> -->
+                       <h1 class="hero_title" style="padding-left: 10%; padding-right:10%;">Desmond Kwame Nunoo</h1>  -->
                         <!-- <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Multimedia (graphic | video | audio | 3D | motion), Robotics (electronics | Arduino | Raspberry Pi | IoT | 3D printing) & Software (UI/UX | web | Android | iOS ) and Data (analytics | database | research) </h1> -->
 
-<!-- <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Design (Graphic, 3D, Motion, UI/UX) & Tech (Robotics, Data, Web, Mobile)</h1>  -->
-
-
-
-
-                <h2 class="hero_title">Desmond Kwame Nunoo</h2>
-                <p class="hero_desc">Design (Graphic, 3D, Motion, UI/UX) & Tech (Robotics, Data, Web, Mobile)</p>
-           
-
-
-
-
-
-
-
-
-
-
+<!--  <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Design (Graphic, 3D, Motion, UI/UX) & Tech (Robotics, Data, Web, Mobile)</h1>
 
                         
                          <ul class="social-icons-header hero_desc" style="padding-left: 10%; padding-right:10%;">
@@ -124,8 +107,21 @@
                 </div>
             </div>
 
-        </section>
+        </section>  -->
 
+
+
+
+         <section class="bgimage" id="home">
+        <div class="container-fluid">
+            <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+                        <h2 class="hero_title">Desmond Kwame Nunoo</h2>
+                <p class="hero_desc">Design (Graphic, 3D, Motion, UI/UX) & Tech (Robotics, Data, Web, Mobile)</p>
+            </div>
+            </div>
+        </div>
+    </section>
         <!-- portfolio section-->
 
         <section id="portfolio">
