--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 
 
-         <section class="bgimage" id="home">
+         <section class="bgimage2" id="home">
         <div class="container-fluid">
             <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
