--- a/index.html
+++ b/index.html
@@ -116,8 +116,19 @@
         <div class="container-fluid">
             <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                        <h2 class="hero_title">Desmond Kwame Nunoo</h2>
-                <p class="hero_desc">Design (Graphic, 3D, Motion, UI/UX) & Tech (Robotics, Data, Web, Mobile)</p>
+                        <h1 class="hero_title" style="padding-left: 10%; padding-right:10%;">Desmond Kwame Nunoo</h2>
+                <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Design (Graphic, 3D, Motion, UI/UX) & Tech (Robotics, Data, Web, Mobile)</h1>
+
+                 <ul class="social-icons-header hero_desc" style="padding-left: 10%; padding-right:10%;">
+                           <li><a class="linkedin" href="https://linkedin.com/in/desmondknunoo" target=”_blank”><i
+                                        class="fab fa-linkedin-in"></i></a></li>
+                            <li><a class="behance" href="https://behance.net/desmondknunoo" target=”_blank”><i
+                                        class="fab fa-behance"></i></a></li>
+                            <li><a class="twitter" href="https://twitter.com/desmondknunoo" target=”_blank”><i
+                                        class="fab fa-twitter"></i></a></li>
+                            <li><a class="github" href="https://github.com/desmondknunoo" target=”_blank”><i
+                                        class="fab fa-github"></i></a></li>
+                        </ul>
             </div>
             </div>
         </div>
