--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                        <h1 class="hero_title" style="padding-left: 10%; padding-right:10%;">Desmond Kwame Nunoo</h1>  -->
                         <!-- <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Multimedia (graphic | video | audio | 3D | motion), Robotics (electronics | Arduino | Raspberry Pi | IoT | 3D printing) & Software (UI/UX | web | Android | iOS ) and Data (analytics | database | research) </h1> -->
 
-<!--  <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Design (Graphic, 3D, Motion, UI/UX) & Tech (Robotics, Data, Web, Mobile)</h1>
+<!--  <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Design (Graphic, 3D, Motion, UI/UX) & Tech (Robotics, AI, Data, Web, Mobile)</h1>
 
                         
                          <ul class="social-icons-header hero_desc" style="padding-left: 10%; padding-right:10%;">
