--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                         <h1 class="hero_title" style="padding-left: 10%; padding-right:10%;">Desmond Kwame Nunoo</h2>
-                <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Robotics Facilitator, stemr.org | AI Mentor, teensinai.com | IoT | 3D | STEM Educator | Building, achendo.com</h1>
+                <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Robotics Facilitator, <a class="link-text" style="font-weight: 300" href="https://stemr.org">STEMR Tech Labs</a> | AI Mentor, <a class="link-text" style="font-weight: 300" href="https://teensinai.com">Teens In AI</a> | IoT | 3D | STEM Educator | Building, <a class="link-text" style="font-weight: 300" href="https://achendo.com">Achendo</a></h1>
 
                  <ul class="social-icons-header hero_desc" style="padding-left: 10%; padding-right:10%;">
                            <li><a class="linkedin" href="https://linkedin.com/in/desmondknunoo" target=”_blank”><i
