--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                         <h1 class="hero_title" style="padding-left: 10%; padding-right:10%;">Desmond Kwame Nunoo</h2>
-                <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Robotics Facilitator, <a class="link-text" style="font-weight: 300" href="https://stemr.org">STEMR Tech Labs</a> | AI Mentor, <a class="link-text" style="font-weight: 300" href="https://teensinai.com">Teens In AI</a> | IoT | 3D | STEM Educator | Building, <a class="link-text" style="font-weight: 300" href="https://achendo.com">Achendo</a></h1>
+                <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Robotics Facilitator, <a class="link-text" style="font-weight: 300" href="https://stemr.org" target=”_blank”>STEMR Tech Labs</a> | AI Mentor, <a class="link-text" style="font-weight: 300" href="https://teensinai.com" target=”_blank”>Teens In AI</a> | IoT | 3D | STEM Educator | Building, <a class="link-text" style="font-weight: 300" href="https://achendo.com" target=”_blank”>Achendo</a></h1>
 
                  <ul class="social-icons-header hero_desc" style="padding-left: 10%; padding-right:10%;">
                            <li><a class="linkedin" href="https://linkedin.com/in/desmondknunoo" target=”_blank”><i
@@ -304,7 +304,7 @@
 
                 <h1 class="text-left" style="color: #d7d7d7; font-weight: 100; margin-left: 2em; margin-right: 2em;">
                     Let's work together. Send me an email
-                    <a class="link-text" style="font-weight: 300" href="mailto:desmondknunoo@gmail.com">here</a>.
+                    <a class="link-text" style="font-weight: 300" href="mailto:desmondknunoo@gmail.com" target=”_blank”>here</a>.
                 </h1>
 
             </div>
