--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                         </li>
                         <!-- <li class="nav-item">
                             <a class="nav-link" href="about.html">About</a>
-                        </li> -->
+                        </li> 
                         <li class="nav-item">
                             <a class="nav-link" href="work.html">Work</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="https://instagram.com/desmondknunoo" target=”_blank”>Blog</a>
                         </li>
@@ -82,37 +82,8 @@
             </div>
         </nav>
         <!-- main banner -->
-       <!--   <section class="bgimage" id="home">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
 
-                       <h1 class="hero_title" style="padding-left: 10%; padding-right:10%;">Desmond Kwame Nunoo</h1>  -->
-                        <!-- <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Multimedia (graphic | video | audio | 3D | motion), Robotics (electronics | Arduino | Raspberry Pi | IoT | 3D printing) & Software (UI/UX | web | Android | iOS ) and Data (analytics | database | research) </h1> -->
-
-<!--  <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Design (Graphic, 3D, Motion, UI/UX) & Tech (Robotics, AI, Data, Web, Mobile)</h1>
-
-                        
-                         <ul class="social-icons-header hero_desc" style="padding-left: 10%; padding-right:10%;">
-                           <li><a class="linkedin" href="https://linkedin.com/in/desmondknunoo" target=”_blank”><i
-                                        class="fab fa-linkedin-in"></i></a></li>
-                            <li><a class="behance" href="https://behance.net/desmondknunoo" target=”_blank”><i
-                                        class="fab fa-behance"></i></a></li>
-                            <li><a class="twitter" href="https://twitter.com/desmondknunoo" target=”_blank”><i
-                                        class="fab fa-twitter"></i></a></li>
-                            <li><a class="github" href="https://github.com/desmondknunoo" target=”_blank”><i
-                                        class="fab fa-github"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-        </section>  -->
-
-
-
-
-         <section class="bgimage" id="home">
+        <section class="bgimage" id="home">
         <div class="container-fluid">
             <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
@@ -122,8 +93,8 @@
                  <ul class="social-icons-header hero_desc" style="padding-left: 10%; padding-right:10%;">
                            <li><a class="linkedin" href="https://linkedin.com/in/desmondknunoo" target=”_blank”><i
                                         class="fab fa-linkedin-in"></i></a></li>
-                            <li><a class="behance" href="https://behance.net/desmondknunoo" target=”_blank”><i
-                                        class="fab fa-behance"></i></a></li>
+            <!--                <li><a class="behance" href="https://behance.net/desmondknunoo" target=”_blank”><i
+                                        class="fab fa-behance"></i></a></li> -->
                             <li><a class="twitter" href="https://twitter.com/desmondknunoo" target=”_blank”><i
                                         class="fab fa-twitter"></i></a></li>
                             <li><a class="github" href="https://github.com/desmondknunoo" target=”_blank”><i
@@ -135,7 +106,7 @@
     </section>
         <!-- portfolio section-->
 
-        <section id="portfolio">
+<!-- <section id="portfolio">
             <div class="portfolio-text container mt-3">
                 <h1 class="text-left" style="color: #d7d7d7; margin-left: 2em; margin-right: 2em;">Selected Work
                 </h1>
@@ -291,8 +262,7 @@
                     <a class="link-text" style="font-weight: 300" href="work.html">here</a>.
                 </h1>
             </div>
-        </section>
-
+        </section> --> 
 
 
         <!-- contact section-->
@@ -315,7 +285,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-sm-6 col-12">
-                        <p class="copyright-text">© 2024 Desmond Kwame Nunoo
+                        <p class="copyright-text">© 2025 Desmond Kwame Nunoo
 
                         </p>
                     </div>
@@ -323,8 +293,8 @@
                         <ul class="social-icons">
                             <li><a class="linkedin" href="https://linkedin.com/in/desmondknunoo" target=”_blank”><i
                                         class="fab fa-linkedin-in"></i></a></li>
-                            <li><a class="behance" href="https://behance.net/desmondknunoo" target=”_blank”><i
-                                        class="fab fa-behance"></i></a></li>
+              <!--              <li><a class="behance" href="https://behance.net/desmondknunoo" target=”_blank”><i
+                                        class="fab fa-behance"></i></a></li> -->
                             <li><a class="twitter" href="https://twitter.com/desmondknunoo" target=”_blank”><i
                                         class="fab fa-twitter"></i></a></li>
                             <li><a class="github" href="https://github.com/desmondknunoo" target=”_blank”><i
