--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                                         class="fab fa-linkedin-in"></i></a></li>
             <!--                <li><a class="behance" href="https://behance.net/desmondknunoo" target=”_blank”><i
                                         class="fab fa-behance"></i></a></li> -->
-                            <li><a class="twitter" href="https://twitter.com/desmondknunoo" target=”_blank”><i
-                                        class="fab fa-twitter"></i></a></li>
+                            <li><a class="twitter" href="https://x.com/desmondknunoo" target=”_blank”><i
+                                        class="fab fa-x-twitter"></i></a></li>
                             <li><a class="github" href="https://github.com/desmondknunoo" target=”_blank”><i
                                         class="fab fa-github"></i></a></li>
                         </ul>
@@ -296,7 +296,7 @@
               <!--              <li><a class="behance" href="https://behance.net/desmondknunoo" target=”_blank”><i
                                         class="fab fa-behance"></i></a></li> -->
                             <li><a class="twitter" href="https://x.com/desmondknunoo" target=”_blank”><i
-                                        class="fab fa-x"></i></a></li>
+                                        class="fab fa-x-twitter"></i></a></li>
                             <li><a class="github" href="https://github.com/desmondknunoo" target=”_blank”><i
                                         class="fab fa-github"></i></a></li>
 
