--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <!--                <li><a class="behance" href="https://behance.net/desmondknunoo" target=”_blank”><i
                                         class="fab fa-behance"></i></a></li> -->
                             <li><a class="twitter" href="https://x.com/desmondknunoo" target=”_blank”><i
-                                        class="brands fa-x-twitter"></i></a></li>
+                                        class="fa-brands fa-x-twitter"></i></a></li>
                             <li><a class="github" href="https://github.com/desmondknunoo" target=”_blank”><i
                                         class="fab fa-github"></i></a></li>
                         </ul>
@@ -296,7 +296,7 @@
               <!--              <li><a class="behance" href="https://behance.net/desmondknunoo" target=”_blank”><i
                                         class="fab fa-behance"></i></a></li> -->
                             <li><a class="twitter" href="https://x.com/desmondknunoo" target=”_blank”><i
-                                        class="brands fa-x-twitter"></i></a></li>
+                                        class="fa-brands fa-x-twitter"></i></a></li>
                             <li><a class="github" href="https://github.com/desmondknunoo" target=”_blank”><i
                                         class="fab fa-github"></i></a></li>
 
