--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </section>
         <!-- portfolio section-->
 
-<!-- <section id="portfolio">
+<section id="portfolio">
             <div class="portfolio-text container mt-3">
                 <h1 class="text-left" style="color: #d7d7d7; margin-left: 2em; margin-right: 2em;">Selected Work
                 </h1>
@@ -262,7 +262,7 @@
                     <a class="link-text" style="font-weight: 300" href="work.html">here</a>.
                 </h1>
             </div>
-        </section> --> 
+        </section>
 
 
         <!-- contact section-->
