--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="#home">Home</a>
                         </li>
-                        <!-- <li class="nav-item">
+                     <li class="nav-item">
                             <a class="nav-link" href="about.html">About</a>
                         </li> 
                         <li class="nav-item">
                             <a class="nav-link" href="work.html">Work</a>
-                        </li> -->
+                        </li> 
                         <li class="nav-item">
                             <a class="nav-link" href="https://instagram.com/desmondknunoo" target=”_blank”>Blog</a>
                         </li>
