--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                  <ul class="social-icons-header hero_desc" style="padding-left: 10%; padding-right:10%;">
                            <li><a class="linkedin" href="https://linkedin.com/in/desmondknunoo" target=”_blank”><i
                                         class="fab fa-linkedin-in"></i></a></li>
-            <!--                <li><a class="behance" href="https://behance.net/desmondknunoo" target=”_blank”><i
+                            <li><a class="behance" href="https://behance.net/desmondknunoo" target=”_blank”><i
                                         class="fab fa-behance"></i></a></li> -->
                             <li><a class="twitter" href="https://x.com/desmondknunoo" target=”_blank”><i
                                         class="fab fa-twitter"></i></a></li>
