--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
                 </div>
             </div>
 
-            <!-- <div class="col-lg-4 mt-4">
+          <div class="col-lg-4 mt-4">
                 <div class="card servicesText">
                     <div class="card-body">
                         <i class='fa servicesIcon fa-mobile'></i>
