--- a/about.html
+++ b/about.html
@@ -207,6 +207,19 @@
             </div> -->
         </div>
 
+         <div class="col-lg-4 mt-4">
+                <div class="card servicesText">
+                    <div class="card-body">
+                        <i class='fa servicesIcon fa-mobile'></i>
+                        <h4 class="card-title mt-3">Android Development</h4>
+                        <p class="card-text mt-3" style="font-weight: 200">Collaborate and write Java and Kotlin
+                            code in Android Studio
+                            to develop Android apps. Monitor the performance of live apps and fix bugs.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 <footer class="site-footer">
