--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="work.html">Work</a>
                         </li> 
-                        <li class="nav-item">
+                     <!--   <li class="nav-item">
                             <a class="nav-link" href="https://instagram.com/desmondknunoo" target=”_blank”>Blog</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
