--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
             <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                         <h1 class="hero_title" style="padding-left: 10%; padding-right:10%;">Desmond Kwame Nunoo</h2>
-                <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">STEM Education | Robotics | AI | IoT | 3D Design & Printing</a></h1>
+                <!-- <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">STEM Education | Robotics | AI | IoT | 3D Design & Printing</a></h1> -->
+                <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">Graphic Designer | 3D Stage/Evenr Simulator | UI/UX Designer | Motion Graphics </a></h1>
 
                  <ul class="social-icons-header hero_desc" style="padding-left: 10%; padding-right:10%;">
                            <li><a class="linkedin" href="https://linkedin.com/in/desmondknunoo" target=”_blank”><i
