--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                            <li><a class="linkedin" href="https://linkedin.com/in/desmondknunoo" target=”_blank”><i
                                         class="fab fa-linkedin-in"></i></a></li>
                             <li><a class="behance" href="https://behance.net/desmondknunoo" target=”_blank”><i
-                                        class="fab fa-behance"></i></a></li> -->
+                                        class="fab fa-behance"></i></a></li> 
                             <li><a class="twitter" href="https://x.com/desmondknunoo" target=”_blank”><i
                                         class="fab fa-twitter"></i></a></li>
                             <li><a class="github" href="https://github.com/desmondknunoo" target=”_blank”><i
