--- a/work.html
+++ b/work.html
@@ -72,9 +72,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="">Work</a>
                         </li>
-                        <li class="nav-item">
+                      <!--    <li class="nav-item">
                             <a class="nav-link" href="https://instagram.com/desmondknunoo" target=”_blank”>Blog</a>
-                        </li>
+                        </li>-->
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
