--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <!-- portfolio section-->
 
 <section id="portfolio">
-            <div class="portfolio-text container mt-3">
+      <!--       <div class="portfolio-text container mt-3">
                 <h1 class="text-left" style="color: #d7d7d7; margin-left: 2em; margin-right: 2em;">Selected Work
                 </h1>
                 <h1 class="text-left" style="color: #d7d7d7; font-weight: 100; margin-left: 2em; margin-right: 2em;">
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                 </div>
-
+-->
                 <hr>
 
                 <div class="row">
