--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
         <!-- portfolio section-->
 
 <section id="portfolio">
-      <!--       <div class="portfolio-text container mt-3">
+         <div class="portfolio-text container mt-3">
                 <h1 class="text-left" style="color: #d7d7d7; margin-left: 2em; margin-right: 2em;">Selected Work
                 </h1>
                 <h1 class="text-left" style="color: #d7d7d7; font-weight: 100; margin-left: 2em; margin-right: 2em;">
                     Developing digital products & designing solutions.</h1>
-                <div class="row">
+         <!--         <div class="row">
 
                     <div class="col-lg-4 mt-4">
                         <div class="card2 portfolioContent">
